--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=LoginRegisterServer
+spring.datasource.url=jdbc:mysql://localhost:3306/mysql
+spring.datasource.username=root
+spring.datasource.password=Sql@my3306
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
